--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header {
 header h1 {
     margin: 0;
     font-size: 20px;
+    float: left;
 }
 nav {
     display: flex;
@@ -38,6 +39,7 @@ nav a:hover {
 .search {
     display: flex;
     align-items: center;
+    float: right;
 }
 .search input[type="text"] {
     padding: 5px;
@@ -60,6 +62,17 @@ nav a:hover {
 }
 .container {
     padding: 20px;
+}
+.Business {
+    position: relative;
+}
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+}
+.D {
+    background-image: ();
 }
 .categories, .browse-all {
     margin-bottom: 20px;
@@ -85,4 +98,11 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+}
+.left {
+    float: left;
+}
+.right {
+    display: inline;
+    float: right;
 }
