--- a/style.css
+++ b/style.css
@@ -90,7 +90,14 @@ nav a:hover {
         transform: scale3d(1.1, 1.1, 1.1);
         transition: 0.5s;
         transition-behavior: smooth;
+        cursor: zoom-in;
     }
+
+    .category img {
+        transition: opacity 0.5s, transform 0.5s;
+        transition-behavior: smooth;
+    }
+    
     .more-btn {
         display: block;
         margin: 20px auto;
@@ -108,6 +115,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    font-size: small;
 }
 .left {
     float: left;
