--- a/style.css
+++ b/style.css
@@ -3,15 +3,16 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    padding-top: 80px; /* Adjust this value based on the header's height */
+    /* padding-top: 80px; Adjust this value based on the header's height */
     background-color: #f4f4f4;
 }
 
 /* Header styling */
 header {
     background-color: rgb(228, 238, 241);
+    width: 100%;
     color: black;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,18 +21,10 @@ header {
     z-index: 1000; /* Ensure this value is higher than other elements */
     flex-wrap: wrap;
 }
-
-/* Header title styling */
-header h1 {
-    margin: 0;
-    font-size: 20px;
-    border: 1px solid;
-    padding: 10px 10px;
-    text-align: center;
+.logo {
+    width: 50px;
+    height: 50px;
     border-radius: 10px;
-    flex: 1 1 auto;
-    background-color: black;
-    color: white;
 }
 
 /* Navigation styling */
@@ -42,12 +35,16 @@ nav {
     color: black;
     flex: 2 1 auto;
     justify-content: center;
+    align-content: center;
+    position: relative;
+    padding-left: 20%;
 }
 
 /* Navigation link styling */
 nav a {
     color: black;
     text-decoration: none;
+    text-align: center;
 }
 
 /* Navigation link hover effect */
@@ -73,13 +70,14 @@ nav a:hover {
 }
 
 /* Search button styling */
-.search button {
-    padding: 5px 10px;
-    background-color: #555;
+.search-button {
+    background-color: #fff;
+    padding: 5px 5px;
     color: #fff;
-    border: none;
-    border-radius: 3px;
+    border-radius: 1.5px;
     cursor: pointer;
+    height: 15px;
+    width: 15px;
 }
 
 /* Responsive styling for screens with max width of 768px */
@@ -87,8 +85,7 @@ nav a:hover {
     header {
         padding: 10px;
     }
-    header h1 {
-        font-size: 18px;
+    header .logo {
         padding: 5px 10px;
     }
     nav {
@@ -98,6 +95,10 @@ nav a:hover {
     .search {
         justify-content: center;
         margin-top: 10px;
+    }
+    .search-button {
+        position: relative;
+        justify-content: center;
     }
 }
 
@@ -113,9 +114,11 @@ nav a:hover {
     .search input[type="text"] {
         width: 100%;
     }
-    .search button {
+    .search-button {
         width: 100%;
         margin-top: 5px;
+        position: relative;
+        justify-content: center;
     }
 }
 
